# python-data-flow

./: .coveragerc  .gitignore  CHANGELOG.md  Makefile  README.md  Usage.md  pyproject.toml  requirements.dev.txt  requirements.txt
.github/workflows/: ci.yaml  tests.yaml
data_flow/: __init__.py  data_flow.py
data_flow/lib/: __init__.py  data_columns.py  data_from.py  data_to.py  fireducks.py  pandas.py  polars.py
mysiar_data_flow/: data_flow.py
tests/: BaseTestCase.py  SequenceTestCase.py  test_base_test_case.py  test_data_flow.py  test_data_flow_csv.py  test_data_flow_feather.py  test_data_flow_hdf.py  test_data_flow_json.py  test_data_flow_parquet.py
