[project]
license = {file = "LICENSE"}
[tool.poetry]
name = "mysiar-data-flow"
version = "0.0.3rc2"
readme = "README.md"
license = "MIT"
repository = "https://github.com/mysiar-org/python-data-flow"
documentation = "https://mysiar-org.github.io/mysiar-data-flow/"
description = "Python data manipulation library"
authors = ["Piotr Synowiec <psynowiec@gmail.com>"]
maintainers = ["Piotr Synowiec <psynowiec@gmail.com>"]
keywords = ["dataframe", "pandas", "polars", "fireducks"]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
]
include = [
    "LICENSE",
    "CHANGELOG.md"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/mysiar-org/python-data-flow/issues"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fireducks = "*"
tables = "*"
pyarrow = "*"
pandas = "*"
polars = "*"
black = "*"
flake8 = "*"
pyproject-flake8 = "*"
pytest = "*"
pytest-cov = "*"
poetry = "*"


[project.urls]
documentation = "https://mysiar-org.github.io/mysiar-data-flow"
repository = "https://github.com/mysiar-org/python-data-flow"
issues = "https://github.com/mysiar-org/python-data-flow/issues"


[tool.poetry.extras]
all = [

]
dev = [
    "black",
    "flake8",
    "pyproject-flake8",
    "pytest",
    "pytest-cov",
    "poetry",
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120
exclude = [".git", "venv", "__pychache__", "__init__.py", "build", "dist"]